Created /category/{category} endpoint